Some basic css added

--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <head>
-<link href="/normalize.css" rel="stylesheet">
+	<title>Carolina Flores </title>
+<link href="first_site_css.css" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
 <header>
 <h1>Carolina Flores</h1>
-<ul>
-<li> About me </li>
-<li> Philosophy </li>
-<li> Effective Altruism </li>
-<li> Other interests </li>
-</ul>
+<table>
+<thead>
+<th> About me </th>
+<th>Resume</th>
+<th> Philosophy </th>
+<th> Effective Altruism </th>
+<th> Blog </th>
+<th>Contact me</th>
+</thead>
+<tbody>
+	<tr>
+		<td> Biography</td>
+	</tr>	
+	<tr> 
+		<td>Goals+Projects</td>
+	</tr>
+</tbody>
+</table>
 </header>
+
 <h3> About me </h3>
 <p> I am a second year student  reading for a degree in Maths and Philosophy at the University of Oxford. </p>
 <p> I grew up in Portugal and moved to the UK to study. </p>
 <p> I would like to pursue a career in philosophy, with a focus on philosophy of mind in the context of scientific discoveries. I also hope to continue to do work and advocacy in the area of Effective Altruism. </p>
 <p> In my free time, I enjoy running, going to hipster gigs, baking, and drinking with friends (more often than not, tea). </p>
-</Body>
+</body>
