--- a/index.html
+++ b/index.html
@@ -1,36 +1,71 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<title>Carolina Flores </title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href='dist/css/bootstrap.css' rel='stylesheet'>
 <link href="first_site_css.css" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
+
 <header>
 <h1>Carolina Flores</h1>
-<table>
-<thead>
-<th> About me </th>
-<th>Resume</th>
-<th> Philosophy </th>
-<th> Effective Altruism </th>
-<th> Blog </th>
-<th>Contact me</th>
-</thead>
-<tbody>
-	<tr>
-		<td> Biography</td>
-	</tr>	
-	<tr> 
-		<td>Goals+Projects</td>
-	</tr>
-</tbody>
-</table>
 </header>
 
+<nav class="navbar navbar-standard" role="navigation">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      
+   	</div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+      	<li><a href="#" class="dropdown-toggle active" data-toggle="dropdown">About Me <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">CV</a></li>
+            <li><a href="#">Goals and Projects</a></li>
+          </ul></li>
+        <li><a href="#">Philosophy</a></li>
+        <li><a href="#">Effective Altruism</a></li>
+        <li><a href='#'>Blog</a></li>
+      </ul>
+
+      
+    </div><!-- /.navbar-collapse -->
+  </nav>
+  </div><!-- /.container-fluid -->
+
+
+
 <h3> About me </h3>
-<p> I am a second year student  reading for a degree in Maths and Philosophy at the University of Oxford. </p>
+<p> My name is Carolina Flores and I am in my second year reading for a degree in Mathematics and Philosophy at the University of Oxford. </p>
+<p> I would like to pursue further study in philosophy, with a focus on philosophy of mind in the context of current neuroscience. Some of my other current areas of interest are Philosophy of Mathematics and Early Modern Philosophy, but as so many other philosophers, my interests range widely - the nature improves philosophy is such that one's understanding of any area gains by studying others.</p> 
+<p>I also hope to continue to do work and advocacy in the area of Effective Altruism. </p>
 <p> I grew up in Portugal and moved to the UK to study. </p>
-<p> I would like to pursue a career in philosophy, with a focus on philosophy of mind in the context of scientific discoveries. I also hope to continue to do work and advocacy in the area of Effective Altruism. </p>
 <p> In my free time, I enjoy running, going to hipster gigs, baking, and drinking with friends (more often than not, tea). </p>
+
+<script src='https://code.jquery.com/jquery.js'></script>
+<script type='text/javascript' src='dist/js/bootstrap.js'></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-48896007-1', 'carolinahflores.com');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
+</html>
